Fix author image stretching

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2521,6 +2521,7 @@ html {
 
 .section-intern__address img,
 .section-intern__address svg {
+  align-self: flex-start;
   max-width: 6.875em;
 }
 
