--- a/resources/sass/components/_section-intern.scss
+++ b/resources/sass/components/_section-intern.scss
@@ -102,6 +102,7 @@
 
 .section-intern__address img,
 .section-intern__address svg {
+  align-self: flex-start;
   max-width: 6.875em;
 
   @media screen and (min-width: breakpoint('desktop')) {
